# chat

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  Procfile  pyproject.toml  requirements.txt
chat/: admin.py  consumers.py  context_processors.py  forms.py  models.py  routing.py  urls.py  utils.py  views.py
chat/consumers/: __init__.py  consumers.py  helpers.py
chat/static/: account_settings.js  index.js  room.js
chat/static/css/: room.css
chat/templates/: account_settings.html  base.html  index.html  login.html  login_required.html  navbar.html  reg.html  room.html
chat/templatetags/: q_tags.py
core/: asgi.py  settings.py  urls.py
