[tool.poetry]
name = "chatty"
version = "0.0.1"
description = ""
authors = ["demogi4523 <demogi4523@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aioredis = "1.3.1"
asgiref = "3.5.0"
async-timeout = "4.0.2"
attrs = "21.4.0"
autobahn = "22.3.2"
Automat = "20.2.0"
"backports.zoneinfo" = "0.2.1"
cffi = "1.15.0"
channels = "3.0.4"
channels-redis = "3.4.0"
constantly = "15.1.0"
cryptography = "36.0.2"
daphne = "3.0.2"
Django = "4.0.3"
gunicorn = "20.1.0"
h11 = "0.13.0"
h2 = "4.1.0"
hiredis = "2.0.0"
hpack = "4.0.0"
hypercorn = "0.13.2"
hyperframe = "6.0.1"
hyperlink = "21.0.0"
idna = "3.3"
incremental = "21.3.0"
msgpack = "1.0.3"
Pillow = "9.1.0"
priority = "2.0.0"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pycparser = "2.21"
pyOpenSSL = "22.0.0"
service-identity = "21.1.0"
six = "1.16.0"
sqlparse = "0.4.2"
toml = "0.10.2"
Twisted = "22.2.0"
txaio = "22.2.1"
typing-extensions = "4.1.1"
wsproto = "1.1.0"
"zope.interface" = "5.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
